# Chess-CPP

./: .gitignore  CMakeLists.txt  Main.cpp  main.cpp
core/: Color.cpp  Color.h  Position.cpp  Position.h  ResultType.cpp  ResultType.h
core/include/: Color.h
core/lib/: Position.cpp
include/model/: Board.h  Chess.h  Field.h  Player.h
include/model/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
include/presenter/: Session.h
include/viewer/: CLI.h  Input.h  Output.h
lib/gui/: MyApp.cpp  MyApp.h
lib/model/: Board.cpp  Chess.cpp  Field.cpp  Player.cpp
lib/model/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
lib/presenter/: Session.cpp
lib/viewer/: CLI.cpp  Input.cpp  Output.cpp
model/: Board.cpp  Board.h  Chess.cpp  Chess.h  Field.cpp  Field.h  Player.cpp  Player.h
model/Pieces/: Knight.cpp  Pawn.cpp  Pawn.h  Piece.cpp  Queen.cpp  Rook.cpp  Rook.h
model/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
presenter/: Session.cpp  Session.h
test/: hello_test.cpp  movingPiecesTest.cpp
viewer/: CLI.cpp  CLI.h  Input.cpp  Input.h  Output.cpp  Output.h
